--- a/ESR-Technical-Documentation/GroundfishPortAvailability.qmd
+++ b/ESR-Technical-Documentation/GroundfishPortAvailability.qmd
@@ -4,11 +4,16 @@
 
 The present analysis differs from Selden et al. (2020) in three ways:
 
-1- We estimated the spatial distribution of species using the R package sdmTMB (Anderson et al. 2022; R Core Team 2023) instead of VAST (Thorson 2019). The sdmTMB models included Pass and scaled depth as fixed parameters. Year was a time variable and models included both spatial and spatiotemporal (iid) autocorrelation, and a delta-poisson-link-gamma error distribution (Thorson 2018) error distribution.
+1- We estimated the spatial distribution of species using the R package sdmTMB (Anderson et al. 2022; R Core Team 2023) instead of VAST (Thorson 2019). The sdmTMB models included Pass and normalized depth as fixed parameters. Year was a time variable and models included both spatial and spatiotemporal (iid) autocorrelation, and a delta-poisson-link-gamma error distribution (Thorson 2018) error distribution.
 
 2- We used the Location Biomass directly instead of scaling it by spawning stock biomass from the assessment. Thus, the Availability Index is a relative biomass index and not actual available biomass. Biomass was then scaled to 0-1 for presentation by dividing by the highest value in any year.
 
 3- We used only the WCGBTS, and did not combine the Triennial survey (1980-2004) with the WCGBTS. This approach shortens the analysis period but allows us to expand the depth range to 55-1250 m.
+
+**2025-01 Update**
+
+Previous sdmTMB models used a delta-poisson-link-gamma model structure/distribution and included depth a linear factor. In 2025 (for the CY2025 ESR), models were updated to use a delta-lognormal model structure, and normalized depth was included as a smoothed variable (with three knots).  The delta-lognormal models produced better residuals (as evaluate with QQ-plots) than the delta-poisson-link-gamma models. The smoothed depth term allowed non-linear relationships with depth, such as higher mid-depth abundance versus shallow and deeper zones. 
+
 
 **Data sources**
 
